update iter3