@@ -1,11 +1,15 @@
-package controller.owner;
+package controller.Owner;
 
+import com.google.gson.Gson;
+import com.google.gson.JsonSyntaxException;
+import com.google.gson.reflect.TypeToken;
 import dao.RenterDAO;
 import dao.RequestDAO;
-
+import java.lang.reflect.Type;
 import dao.RoomDAO;
 import dao.UserDAO;
 import java.io.IOException;
+import java.io.PrintWriter;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.MultipartConfig;
 import jakarta.servlet.annotation.WebServlet;
@@ -14,13 +18,12 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 import java.util.List;
+import java.util.ArrayList;
+import java.util.Vector;
 import jakarta.servlet.http.Part;
 import java.io.BufferedReader;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
-import java.time.LocalDate;
-import java.time.Period;
-import java.time.format.DateTimeFormatter;
 import java.util.Base64;
 import model.*;
 import org.json.simple.JSONArray;
@@ -55,7 +58,7 @@ public class OwnerController extends HttpServlet {
             request.getRequestDispatcher("login.jsp").forward(request, response);
             return;
         }
-
+                        
         if (service == null) {
             service = "OwnerHome";
         }
@@ -77,22 +80,22 @@ public class OwnerController extends HttpServlet {
             roomDetail(request, response, 0);
         } else if (service.equals("editRoom")) {
             roomDetail(request, response, 1);
-        } else if (service.equals("updateRoomStatus")) {
-            updateRoomStatus(request, response);
-        } else if (service.equals("setUnderRepair")) {
-            setUnderRepair(request, response);
-        } else if (service.equals("updateRoomItem")) {
-            updateRoomItem(request, response);
         } else if (service.equals("deleteItem")) {
             deleteItem(request, response);
         } else if (service.equals("addItem")) {
             addItem(request, response);
         } else if (service.equals("updateRoomDetail")) {
             updateRoomDetail(request, response);
+        } else if (service.equals("updateRoomItem")) {
+            updateRoomItem(request, response);
         } else if (service.equals("listrequest")) {
             requestList(request, response, 0);
         } else if (service.equals("changereqstatus")) {
             requestList(request, response, 1);
+        } else if (service.equals("updateRoomStatus")) {
+            updateRoomStatus(request, response);
+        } else if (service.equals("setUnderRepair")) {
+            setUnderRepair(request, response);
         }
     }
 
@@ -104,10 +107,9 @@ public class OwnerController extends HttpServlet {
         RoomDAO dao = new RoomDAO();
         int index = Integer.parseInt(request.getParameter("index"));
 
-        int ownerID = (int) request.getSession().getAttribute("userID");
-        List<Rooms> rooms = dao.pagingRoomOwner(index, ownerID);
-        List<Rooms> allRooms = dao.getRoomByOwner(ownerID);
-        int totalRoom = allRooms.size();
+        List<Rooms> rooms = dao.pagingRoom(index, 1);
+        List<Rooms> allRooms = dao.getRooms();
+        int totalRoom = dao.getTotalRoom();
         int totalPage = totalRoom / 6;
         if (totalRoom % 6 != 0) {
             totalPage++;
@@ -126,7 +128,7 @@ public class OwnerController extends HttpServlet {
         RenterDAO daoRenter = new RenterDAO();
         HttpSession session = request.getSession();
         int roomID = Integer.parseInt(request.getParameter("roomID"));
-        RoomDetail roomDetail = dao.getRoomDetail(roomID);
+        RoomDetailSe roomDetail = dao.getRoomDetail(roomID);
         List<String> listNameRenter = daoRenter.getRenterName(roomID);
         request.setAttribute("roomDetail", roomDetail);
         request.setAttribute("listNameRenter", listNameRenter);
@@ -142,9 +144,39 @@ public class OwnerController extends HttpServlet {
         }
     }
 
+    private void deleteItem(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        RoomDAO dao = new RoomDAO();
+        int roomID = Integer.parseInt(request.getParameter("roomID"));
+        int itemID = Integer.parseInt(request.getParameter("itemID"));
+        int remove = dao.deleteRoomItem(roomID, itemID);
+        request.getRequestDispatcher("OwnerController?service=editRoom").forward(request, response);
+    }
+
+    private void addItem(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        RoomDAO dao = new RoomDAO();
+        String itemName = request.getParameter("itemName");
+        int roomID = Integer.parseInt(request.getParameter("roomID"));
+        int quantity = Integer.parseInt(request.getParameter("quantity").trim());
+        int itemID = dao.getItemIDOrQuantityByItemName(itemName, 0, 0);
+        RoomDetailSe roomDetail = dao.getRoomDetail(roomID);
+
+        String[] listItemName = roomDetail.getItemName();
+        for (String string : listItemName) {
+            if (string.equalsIgnoreCase(itemName)) {
+                int newQuantity = dao.getItemIDOrQuantityByItemName(itemName, 1, roomID) + quantity;
+                int updateQuantity = dao.updateItemQuantity(roomID, itemID, newQuantity);
+                request.getRequestDispatcher("OwnerController?service=editRoom").forward(request, response);
+                return;
+            }
+        }
+        int addItem = dao.addRoomItem(roomID, itemID, quantity);
+        request.getRequestDispatcher("OwnerController?service=editRoom").forward(request, response);
+    }
+
     private void getOwnerProfile(HttpServletRequest request, HttpServletResponse response, int flag) throws ServletException, IOException {
         RoomDAO dao = new RoomDAO();
-        HttpSession session = request.getSession();
+                        HttpSession session = request.getSession();
+
         int userID = (int) session.getAttribute("userID");
 
         User ownerProfile = dao.getOwnerProfileByID(userID);
@@ -156,51 +188,22 @@ public class OwnerController extends HttpServlet {
         }
     }
 
-    private void requestList(HttpServletRequest request, HttpServletResponse response, int flag) throws ServletException, IOException {
-        RequestDAO requestDAO = new RequestDAO();
-
-        if (flag == 0) {
-            // Get the list of all requests
-            List<RequestList> requests = requestDAO.getAllRequest();
-            // Store the list in the request scope
-            request.setAttribute("requests", requests);
-            // Forward to the JSP page
-            request.getRequestDispatcher("Owner/OwnerRequest.jsp").forward(request, response);
-        } else if (flag == 1) {
-            // REQUEST STATUS UPDATE
-            String rawRequestId = request.getParameter("requestId");
-            String status = request.getParameter("status");
-
-            if (rawRequestId != null && status != null) {
-                try {
-                    int requestId = Integer.parseInt(rawRequestId);
-                    // Fetch the current request
-                    RequestList currentRequest = requestDAO.getRequestByID(requestId);
-                    if (currentRequest != null) {
-                        // Update the request status
-                        boolean updateSuccess = requestDAO.updateRequestStatus(status, requestId);
-
-                        if (updateSuccess) {
-                            // Set success message
-                            request.setAttribute("message", "Request status updated successfully.");
-                        } else {
-                            // Set failure message
-                            request.setAttribute("message", "Failed to update request status.");
-                        }
-                    }
-                } catch (NumberFormatException e) {
-                }
-            }
-            // Redirect back to the list page
-            request.getRequestDispatcher("OwnerController?service=listrequest").forward(request, response);
-        }
+    private void updateAvatar(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        RoomDAO dao = new RoomDAO();
+        Part photo = request.getPart("img");
+                                HttpSession session = request.getSession();
+int userID = (int) session.getAttribute("userID");
+        byte[] avatar_raw = convertInputStreamToByteArray(photo.getInputStream());
+        String avatar = Base64.getEncoder().encodeToString(avatar_raw);
+        int updateAvatar = dao.updateAvatar(new User(15, avatar));
+        request.getRequestDispatcher("OwnerController?service=editOwnerProfile").forward(request, response);
     }
 
     private void updateRoomDetail(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
         RoomDAO dao = new RoomDAO();
         List<Rooms> listRoom = dao.getRooms();
         int roomID = Integer.parseInt(request.getParameter("roomID"));
-        RoomDetail roomDetail = dao.getRoomDetail(roomID);
+        RoomDetailSe roomDetail = dao.getRoomDetail(roomID);
         int currentRoomNumber = roomDetail.getRoomNumber();
         double roomFee = 0;
         int roomNumber = 0;
@@ -242,7 +245,7 @@ public class OwnerController extends HttpServlet {
         Part photo = request.getPart("roomImg");
         String contentType = photo.getContentType();
         byte[] roomImg_raw = null;
-        String roomImg = "";
+        String roomImg = null;
         if (!contentType.equals("image/jpeg")) {
             request.setAttribute("error", "Invalid room image");
             request.getRequestDispatcher("OwnerController?service=editRoom&roomID=" + roomID).forward(request, response);
@@ -256,17 +259,6 @@ public class OwnerController extends HttpServlet {
         request.getRequestDispatcher("OwnerController?service=roomDetail").forward(request, response);
     }
 
-    private void updateAvatar(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        RoomDAO dao = new RoomDAO();
-        Part photo = request.getPart("img");
-        HttpSession session = request.getSession();
-        int userID = (int) session.getAttribute("userID");
-        byte[] avatar_raw = convertInputStreamToByteArray(photo.getInputStream());
-        String avatar = Base64.getEncoder().encodeToString(avatar_raw);
-        int updateAvatar = dao.updateAvatar(new User(userID, avatar));
-        request.getRequestDispatcher("OwnerController?service=editOwnerProfile").forward(request, response);
-    }
-
     private void updateOwnerProfile(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
         RoomDAO dao = new RoomDAO();
 
@@ -276,46 +268,24 @@ public class OwnerController extends HttpServlet {
         String gender = request.getParameter("gender");
         String phone = request.getParameter("phone");
         String address = request.getParameter("address");
-        HttpSession session = request.getSession();
-        int userID = (int) session.getAttribute("userID");
-        if (fullName == null || fullName.isEmpty() || fullName.trim().isEmpty()) {
+                        HttpSession session = request.getSession();
+int userID = (int) session.getAttribute("userID");
+        if (fullName == null || fullName.isEmpty() || fullName.isBlank() || fullName.trim().isEmpty()) {
             hasError = true;
-            request.setAttribute("fullNameError", "Tên đầy đủ là bắt buộc.");
-        }
-
-        // Kiểm tra số điện thoại
-        if (phone == null || phone.length() != 10 || !phone.startsWith("0") || !phone.matches("[0-9]+")) {
+        } else if (phone == null || phone.length() != 10 || !phone.startsWith("0") || !phone.matches("[0-9]+")) {
             hasError = true;
-            request.setAttribute("phoneError", "Số điện thoại không hợp lệ.");
-        }
-
-        // Kiểm tra địa chỉ
-        if (address == null || address.isEmpty() || address.trim().isEmpty()) {
+        } else if (address == null || address.isEmpty() || address.isBlank()) {
             hasError = true;
-            request.setAttribute("addressError", "Địa chỉ là bắt buộc.");
-        }
-
-        // Kiểm tra ngày sinh (độ tuổi)
-        LocalDate birthDate = null;
-        if (dob != null) {
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-            birthDate = LocalDate.parse(dob, formatter);
-            int age = Period.between(birthDate, LocalDate.now()).getYears();
-            if (age < 18) {
-                hasError = true;
-                request.setAttribute("dobError", "Bạn phải ít nhất 18 tuổi.");
-            }
         }
 
         if (hasError) {
-            request.setAttribute("error", "Vui lòng sửa các lỗi.");
+            request.setAttribute("error", "Invalid input information. Please check again.");
             request.getRequestDispatcher("OwnerController?service=ownerProfile").forward(request, response);
-            return;
         } else {
-            int update = dao.updateOwnerProfile(new User(userID, fullName, gender, birthDate, address, phone));
+            int update = dao.updateOwnerProfile(new User(15, fullName, gender, dob, address, phone));
+
             request.getRequestDispatcher("OwnerController?service=ownerProfile").forward(request, response);
         }
-
     }
 
     private void updateRoomItem(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
@@ -363,35 +333,6 @@ public class OwnerController extends HttpServlet {
         } catch (ParseException e) {
             e.printStackTrace();
         }
-    }
-
-    private void deleteItem(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        RoomDAO dao = new RoomDAO();
-        int roomID = Integer.parseInt(request.getParameter("roomID"));
-        int itemID = Integer.parseInt(request.getParameter("itemID"));
-        int remove = dao.deleteRoomItem(roomID, itemID);
-        request.getRequestDispatcher("OwnerController?service=editRoom").forward(request, response);
-    }
-
-    private void addItem(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        RoomDAO dao = new RoomDAO();
-        String itemName = request.getParameter("itemName");
-        int roomID = Integer.parseInt(request.getParameter("roomID"));
-        int quantity = Integer.parseInt(request.getParameter("quantity").trim());
-        int itemID = dao.getItemIDOrQuantityByItemName(itemName, 0, 0);
-        RoomDetail roomDetail = dao.getRoomDetail(roomID);
-
-        String[] listItemName = roomDetail.getItemName();
-        for (String string : listItemName) {
-            if (string.equalsIgnoreCase(itemName)) {
-                int newQuantity = dao.getItemIDOrQuantityByItemName(itemName, 1, roomID) + quantity;
-                int updateQuantity = dao.updateItemQuantity(roomID, itemID, newQuantity);
-                request.getRequestDispatcher("OwnerController?service=editRoom").forward(request, response);
-                return;
-            }
-        }
-        int addItem = dao.addRoomItem(roomID, itemID, quantity);
-        request.getRequestDispatcher("OwnerController?service=editRoom").forward(request, response);
     }
 
     public byte[] convertInputStreamToByteArray(InputStream inputStream) throws IOException {
@@ -442,6 +383,56 @@ public class OwnerController extends HttpServlet {
     public String getServletInfo() {
         return "Short description";
     }// </editor-fold>
+
+    private void requestList(HttpServletRequest request, HttpServletResponse response, int flag) throws ServletException, IOException {
+    RequestDAO requestDAO = new RequestDAO();
+    HttpSession session = request.getSession();
+    int ownerID = (int) session.getAttribute("userID");
+    if (flag == 0) {
+         List<RequestList> requests = requestDAO.getReqListByOwnerID(ownerID);
+        request.setAttribute("requests", requests);
+                request.setAttribute("debugOwnerID", ownerID);
+
+        request.getRequestDispatcher("Owner/OwnerRequest.jsp").forward(request, response);
+    } else if (flag == 1) {
+        // REQUEST STATUS UPDATE
+        String rawRequestId = request.getParameter("requestId");
+        String status = request.getParameter("status");
+
+        if (rawRequestId != null && status != null) {
+            try {
+                int requestId = Integer.parseInt(rawRequestId);
+                // Fetch the current request
+                RequestList currentRequest = requestDAO.getRequestByID(requestId);
+
+                if (currentRequest != null) {
+                    // Update the request status regardless of the current state
+                    boolean updateSuccess = requestDAO.updateRequestStatus(status, requestId);
+
+                    if (updateSuccess) {
+                        // Set success message
+                        request.getSession().setAttribute("message", "Request status updated successfully.");
+                    } else {
+                        // Set failure message
+                        request.getSession().setAttribute("message", "Request status updated successfully.");
+                    }
+                } else {
+                    // Set message if request does not exist
+                    request.getSession().setAttribute("message", "Request not found.");
+                }
+            } catch (NumberFormatException e) {
+                // Handle invalid request ID format
+                request.getSession().setAttribute("message", "Invalid request ID format.");
+            }
+        } else {
+            // Set message if status or requestId is invalid
+            request.getSession().setAttribute("message", "Invalid request parameters.");
+        }
+
+        // Redirect back to the list page
+        response.sendRedirect("OwnerController?service=listrequest");
+    }
+}
 
     private void updateRoomStatus(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
         RoomDAO dao = new RoomDAO();
